# agentcontract-rs

./: Cargo.toml  README.md
src/: audit.rs  errors.rs  lib.rs  loader.rs  main.rs  models.rs  runner.rs
src/validators/: cost.rs  latency.rs  mod.rs  pattern.rs
tests/: integration_test.rs
