[package]
name = "agentcontract"
version = "0.1.1"
edition = "2021"
description = "Rust implementation of the AgentContract specification — behavioral contracts for AI agents"
license = "Apache-2.0"
repository = "https://github.com/agentcontract/agentcontract-rs"
homepage = "https://github.com/agentcontract/spec"
documentation = "https://docs.rs/agentcontract"
keywords = ["ai", "agent", "contract", "governance", "llm"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

[lib]
name = "agentcontract"
path = "src/lib.rs"

[[bin]]
name = "agentcontract"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
